--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -33,7 +33,7 @@ jobs:
         run: npm install
 
       - name: Run linters
-        run: npm run lint
+        run: npm start
 
       - name: Build
         run: npm run build
